whitespace fix

--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+body {
+    text-align: center;
+}
+
 h1 {
     font-size: 400px;
+    margin: 0;
+}
+
+h2 {
+    font-size: 90px;
+    margin: 0;
 }
